package edu.fiuba.algo3.tp2N10;

import java.util.List;

public interface TipoPuntaje {

    Integer puntuar(List<Integer> evaluacion);
}
